--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "heroku-postbuild": "NODE_ENV=production lingui extract && lingui compile && razzle build",
     "dbg": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "test": "jest",
+    "test:integration": "jest -c integration/jest.config.js",
+    "test:integrationWithWatch": "jest -c integration/jest.config.js --watch",
     "lint": "eslint 'src/**/*.js'",
     "start": "NODE_ENV=production node build/server.js",
     "add-locale": "lingui add-locale",
@@ -90,6 +92,8 @@
     "jest": "^24.4.0",
     "jest-dom": "^3.1.2",
     "jest-emotion": "^10.0.9",
+    "jest-puppeteer": "^4.1.0",
+    "puppeteer": "^1.11.0",
     "npm-check": "^5.9.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
@@ -108,6 +112,7 @@
   },
   "jest": {
     "verbose": true,
+    "preset": "jest-puppeteer",
     "setupFilesAfterEnv": [
       "<rootDir>/jest.setup.js"
     ],
