--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "apollo-client": "^2.5.1",
     "apollo-link-error": "^1.1.8",
     "apollo-link-http": "^1.5.12",
+    "axe-puppeteer": "^1.0.0",
     "cds-size-plugin": "^1.1.3",
     "clean-element": "^1.0.3",
     "clean-tag": "^2.0.3",
